Mark tests remote; test coverage by default

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,9 +31,6 @@ include_package_data = False
 test =
     pytest>=4.6
     pytest-astropy
-    pytest-doctestplus
-    pytest-remotedata
-    pytest-xdist
     coverage
 
 [tool:pytest]
@@ -42,7 +39,8 @@ testpaths = "sbsearch"
 astropy_header = true
 doctest_plus = enabled
 text_file_format = rst
-addopts = --doctest-rst --doctest-plus
+addopts = --cov=sbsearch --cov-report=html
+#addopts = --doctest-rst --doctest-plus
 remote_data_strict = true
 doctest_norecursedirs =
     */setup_package.py
