--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,5 @@ requires = ["setuptools",
             "wheel",
             "extension-helpers",
             "numpy",
-            "cython==0.29.22"]
+            "cython>=0.29.22"]
 build-backend = "setuptools.build_meta"
