--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ install_requires =
     astroquery>=0.4.4.dev7007
     sbpy>0.2.2
     sqlalchemy==1.3
-    cython==0.29.22
+    cython>=0.29.22
 include_package_data = False
 
 [options.extras_require]
