--- a/setup.cfg
+++ b/setup.cfg
@@ -25,13 +25,16 @@ install_requires =
     sbpy>0.2.2
     sqlalchemy==1.3
     cython>=0.29.22
+    extension-helpers
 include_package_data = False
 
 [options.extras_require]
 test =
     pytest>=4.6
     pytest-astropy
+    pytest-xdist
     coverage
+    testing.postgresql
 
 [tool:pytest]
 minversion = 4.6
