--- a/setup.cfg
+++ b/setup.cfg
@@ -23,8 +23,8 @@ install_requires =
     astropy>=4.0
     astroquery>=0.4.4.dev7007
     sbpy>0.2.2
-    sqlalchemy==1.3
-    cython>=0.29.22
+    sqlalchemy>=1.3<1.4
+    cython>=0.29.22<0.30
     extension-helpers
 include_package_data = False
 
