--- a/src/sbsearch.h.in
+++ b/src/sbsearch.h.in
@@ -1,16 +1,29 @@
 #ifndef SBSEARCH_H_
 #define SBSEARCH_H_
 
-#define SBSEARCH_VERSION_MAJOR @sbsearch_VERSION_MAJOR@
-#define SBSEARCH_VERSION_MINOR @sbsearch_VERSION_MINOR@
+#define SBSEARCH_VERSION_MAJOR @sbsearch_VERSION_MAJOR @
+#define SBSEARCH_VERSION_MINOR @sbsearch_VERSION_MINOR @
 #define SBSEARCH_VERSION "@sbsearch_VERSION@"
 
-#define SPATIAL_TERM_RESOLUTION 3.5 /* arcmin */
+#define SPATIAL_TERM_RESOLUTION 1 /* arcmin */
 #define TIME_TERMS_PER_DAY 1
 #define EPHEMERIS_TOLERANCE 5e-6 /* radians = 1 arcsec */
+#define SPATIAL_INDEXER_MAX_CELLS 8
 
 //#define MAXIMUM_POLYGON_VERTICES 32
 // Order 1000 seems fine, 10,000 was slower in testing
 #define MAXIMUM_QUERY_CLAUSE_LENGTH 1000
 
-#endif  // SBSEARCH_H_
+// #include <exception>
+// #include <stdexcept>
+
+// namespace sbsearch
+// {
+//     class SBSearchError : public std::runtime_error
+//     {
+//     public:
+//         inline SBSearchError(const char *message) : std::runtime_error(message){};
+//     };
+// }
+
+#endif // SBSEARCH_H_
