--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,33 +4,37 @@ project(sbsearch
 configure_file(src/sbsearch.h.in sbsearch.h)
 
 add_executable(build_test_db
-    src/sbsearch.h
-    src/sbsdb_sqlite3.cc
-    src/util.h
-    src/util.cc
     src/build_test_db.cc
     src/observation.h
     src/observation.cc
+    src/sbsearch.h
     src/sbsdb.h
     src/sbsdb.cc
     src/sbsdb_sqlite3.h
-)
+    src/sbsdb_sqlite3.cc
+    src/util.h
+    src/util.cc
+    )
 target_include_directories(build_test_db PUBLIC
 "${PROJECT_BINARY_DIR}"
 )
 target_link_libraries(build_test_db s2 m sqlite3)
 
 add_executable(query_test_db
-    src/query_test_db.cc
-    src/sbsearch.h
-    src/util.h
-    src/util.cc
-    src/observation.h
-    src/observation.cc
     src/ephemeris.h
     src/ephemeris.cc
+    src/observation.h
+    src/observation.cc
+    src/query_test_db.cc
+    src/sbsearch.h
     src/sbsearch_testing.h
     src/sbsearch_testing.cc
+    src/sbsdb.h
+    src/sbsdb.cc
+    src/sbsdb_sqlite3.h
+    src/sbsdb_sqlite3.cc
+    src/util.h
+    src/util.cc
 )
 target_include_directories(query_test_db PUBLIC
 "${PROJECT_BINARY_DIR}"
