--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ requires =
     pip >= 19.3.1
     tox-pypi-filter >= 0.12
 isolated_build = true
+pass_env =
+    LDFLAGS
 
 [testenv]
 # Run the tests in a temporary directory
