--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ isolated_build = true
 [testenv]
 # Run the tests in a temporary directory
 changedir = .tmp/{envname}
+passenv = HOME, WINDIR, LC_ALL, LC_CTYPE, CC, CI, LDFLAGS
+setenv = MPLBACKEND=agg
 
 description =
     run tests
@@ -23,9 +25,18 @@ deps =
 extras =
     test
 
+allowlist_externals = 
+    echo
+
 commands =
     pip freeze
+    echo {env:LD_LIBRARY_PATH}
     pytest --pyargs sbsearch {posargs}
+
+[testenv:build_docs]
+extras = docs
+commands = 
+    sphinx-build docs docs/_build/html -W -b html {posargs}
 
 [testenv:codestyle]
 # We list the warnings/errors to check for here rather than in setup.cfg because
