--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ requires = [
     "wheel",
     "extension-helpers",
     "numpy",
-    "cython>=0.29.22"
+    "cython>=0.30"
 ]
 build-backend = "setuptools.build_meta"
 
@@ -25,7 +25,7 @@ dependencies = [
     "astroquery>=0.4.5",
     "sbpy>0.3.0",
     "sqlalchemy>=1.3,<1.4",
-    "cython>=0.29.22,<0.30",
+    "cython>=0.30",
     "extension-helpers",
 ]
 dynamic = [ "version" ]
@@ -64,14 +64,14 @@ doctest_plus = "enabled"
 remote_data_strict = true
 doctest_norecursedirs = [ "*/setup_package.py" ]
 
-[tools.coverage.run]
+[tool.coverage.run]
 omit = [
     "sbsearch/test/*",
     "sbsearch/version*",
     "sbsearch/setup_package.py",
 ]
 
-[tools.coverage.report]
+[tool.coverage.report]
 exclude_lines = [
     "pragma: no cover",
     # Don't complain if tests don't hit assertions
