--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dynamic = [ "version" ]
 Repository = "https://github.com/Small-Bodies-Node/sbsearch"
 
 [project.optional-dependencies]
+recommended = [
+    "psycopg2-binary"
+]
 test = [
     "pytest>=4.6",
     "pytest-astropy",
