--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
 license = { text = "BSD 3-Clause License" }
 requires-python = ">=3.8"
 dependencies = [
-    "numpy>=1.17.0",
+    "numpy>=1.17.0,<2",
     "astropy>=4.3",
     "astroquery>=0.4.5",
     "sbpy>0.3.0",
