--- a/.github/workflows/build-s2geometry.yml
+++ b/.github/workflows/build-s2geometry.yml
@@ -27,6 +27,8 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           pwd
+          echo $GITHUB_WORKSPACE
+          ls
           cp $GITHUB_WORKSPACE/_install_s2 .
           S2PREFIX=/usr/local bash _install_s2
       # - name: Cache data
