--- a/.github/workflows/build-s2geometry.yml
+++ b/.github/workflows/build-s2geometry.yml
@@ -31,7 +31,7 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
           ls
-          S2PREFIX=/usr/local bash build_s2
+          S2PREFIX=/usr/local bash build_s2.sh
       # - name: Cache data
       #   if: steps.cache.outputs.cache-hit != 'true'
       #   uses: actions/cache/save@v4
