--- a/.github/workflows/build-s2geometry.yml
+++ b/.github/workflows/build-s2geometry.yml
@@ -29,7 +29,7 @@ jobs:
           python-version: "3.11"
       - name: Install dependencies
         run: |
-          sudo apt updage
+          sudo apt update
           sudo apt install cmake libgflags-dev libgoogle-glog-dev libgtest-dev libssl-dev
       - name: Build and install
         if: steps.cache.outputs.cache-hit != 'true'
