--- a/.github/workflows/build-s2geometry.yml
+++ b/.github/workflows/build-s2geometry.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install cmake libgflags-dev libgoogle-glog-dev libgtest-dev libssl-dev
+          sudo apt install cmake libgflags-dev libgtest-dev libssl-dev
       - name: Build and install
         if: steps.cache.outputs.cache-hit != 'true'
         run: |
