--- a/.github/workflows/build-s2geometry.yml
+++ b/.github/workflows/build-s2geometry.yml
@@ -33,7 +33,7 @@ jobs:
             /usr/local/lib/libs2.so*
             ${{ env.Python_ROOT_DIR }}/lib/python${{ env.PYTHON_VERSION }}/site-packages/_pywraps2.so
             ${{ env.Python_ROOT_DIR }}/lib/python${{ env.PYTHON_VERSION }}/site-packages/pywraps2.py
-          key: s2geometry-${{ hashFiles('**/lockfiles') }}
+          key: s2geometry-py${{ steps.setup-python.outputs.python-version }}
       - name: check vars
         run: |
           echo '${{ steps.setup-python.outputs.python-version }}'
